turtleart.lessons.turtleart.Main.House.scala.error
Source:6: error: type mismatch;
 found   : Integer
 required: Double
	avance(c)
               ^