turtleart.lessons.turtleart.Main.House.scala.code
override def run() {

def carre(c:Integer) {
	for (k <-0 to 3) {
	avance(c)
	droite(90)
	
	}

}
}